# Simple-Web-Server

./: CMakeLists.txt  client_http.hpp  http_examples.cpp  https_examples.cpp  mdm_build.sh  mdm_run.sh  server_http.hpp  server_https.hpp  utility.hpp
tests/: io_test.cpp  parse_test.cpp
